<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:backgroundTint="#060975"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:layout_below="@+id/textView"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/police" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#FAFAFA"
            android:backgroundTintMode="src_atop"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextEmailAddress"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="30dp"
            android:text="@string/log_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FAFAFA"
            android:backgroundTintMode="src_atop"
            android:ems="10"
            android:hint="@string/hint_log_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />

        <LinearLayout
            android:id="@+id/line7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/editTextTextPassword"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextTextPassword"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="27dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_login"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/btn_reg"
                android:textColor="@color/blue"
                android:textSize="20dp" />


        </LinearLayout>

        <Button
            android:id="@+id/forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line7"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="27dp"
            android:layout_weight="1"
            android:backgroundTint="#060975"
            android:text="@string/ForgetPass"
            android:textColor="#BC000000"
            />


    </RelativeLayout>
</ScrollView>

