<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textPersonName"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/NIC"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/nic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textPersonName"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nic"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/Address"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textPersonName"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/Phone"
            android:textColor="@color/blue"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="number"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/Email"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textEmailAddress"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/pass"
            android:textColor="@color/blue"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textPassword"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/confirm"
            android:textColor="@color/blue"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/blue"
            android:ems="17"
            android:inputType="textPassword"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/blue"
            android:text="@string/btn_Register"
            android:textColor="@color/white"
            android:textSize="25dp" />


    </RelativeLayout>

</ScrollView>