<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:map="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
android:textAlignment="center"
tools:context=".FeedBackActivity">

<TextView
    android:id="@+id/textView12"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/heading"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="48dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="203dp"
        android:layout_height="53dp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="60dp"
        android:text="FeedBack"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="20dp"
        android:background="#D5D6D6"
        android:ems="19"
        android:gravity="start|top"
        android:hint="Type here..."
        android:inputType="textMultiLine"
        android:selectAllOnFocus="false"
        android:singleLine="false" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback"/>






    <LinearLayout
        android:id="@+id/feedbackLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ratingBar"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/feedbackCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPassword"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="27dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <Button
            android:id="@+id/feedbackSend"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/send"
            android:textColor="@color/blue"
            android:textSize="20dp" />


    </LinearLayout>



</RelativeLayout>