<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".ProfileActivity">

<TextView
    android:id="@+id/textView12"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/heading"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:textSize="48dp" />


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="141dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="30dp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="103dp"
        android:layout_below="@+id/textView23"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="142dp"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/proName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Address"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/proAddres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView25"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proAddres"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Email"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/proEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/NIC"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/proNIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView27"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proNIC"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Phone"
        android:textColor="@color/blue"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/proPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView28"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text=""
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proPhone"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"

        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"
        android:text="Update"
        android:textColor="@color/white"
        android:textSize="25dp" />
</RelativeLayout>